# phreeqcrm

./: pyproject.toml
swig/: PhreeqcRM.i
swig/python/: CMakeLists.txt  conftest.py  test_basic.py  test_get_value.py  test_init.py  test_irf.py  test_set_value.py
