[build-system]
requires = [
  "scikit-build-core",
  "swig",
  "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "phreeqcrm-mpi"
version = "0.0.20"
description = "A reaction module for transport simulators based on the geochemical model PHREEQC."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause AND LicenseRef-USGS-Public-Domain"
license-files = [
    "LICENSE"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "numpy",
  "PyYAML",
]

[tool.scikit-build]
cmake.version = ">=3.22"
build.verbose = true
cmake.args = ["-DPHREEQCRM_BUILD_MPI=ON"]

[dependency-groups]
dev = [
  "swig",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
]
